# VideoToPaper

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
configs/: argument_config.gemini_smoke.example.json  argument_config.json  argument_config.retrieval_live.example.json  default_config.json  evaluation_config.json  studio_config.json
data/: inquiry_engine.db  mock_transcript.json  mock_video.json
docs/: capstone_plan.md  development_log.md
logs/: inquiry_studio_smoke_readme.md  operator_activity.jsonl
scripts/: check_backend_db.py  evaluation_module_status.py  init_backend_db.py  run_youtube_to_paper.py  setup.ps1  smoke_evaluation.py  smoke_evaluation_failure.py  smoke_evaluation_suite.py  smoke_evaluation_suite_summary.py  smoke_evaluation_validation_failure.py  smoke_evidence_retrieval.py  smoke_export_and_evaluate.py  test.ps1  verify_evaluation_module.py
src/: pipeline_paths.py
tests/: conftest.py  test_accessibility_audit.py  test_adjudication_builder.py  test_adjudication_validator.py  test_anchor_detector.py  test_anchor_validator.py  test_architecture_diagram.py  test_argument_map_builder.py  test_argument_map_validator.py  test_argument_structure_contract.py  test_argument_structure_fallback.py  test_argument_structure_runner.py  test_artifact_manifest.py  test_assembler_fixture_cli.py  test_assembler_fixture_writer.py  test_audit_report_writer.py  test_audit_summary.py  test_audit_summary_writer.py  test_backend_api.py  test_backend_client.py  test_backend_database_url.py  test_backend_db.py  (+144 more)
(+170 files in other folders)
