[project]
name = "videotopaper"
version = "0.2.0"
description = "The Inquiry Engine: a capstone AI engineering project for turning videos into charitable, evidence-balanced research papers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.7",
]
ai = [
  "openai>=1.0",
  "python-dotenv>=1.0",
]
ingestion = [
  "youtube-transcript-api>=0.6",
  "yt-dlp>=2025.1.15",
]
retrieval = [
  "httpx>=0.27",
  "tenacity>=8.2",
]
storage = [
  "alembic>=1.13",
  "sqlalchemy>=2.0",
]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]
ui = [
  "streamlit>=1.38",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
